동영상 자동 재생

--- a/04-popup/03-유튜브 동영상 갤러리/01-기본/index.html
+++ b/04-popup/03-유튜브 동영상 갤러리/01-기본/index.html
@@ -19,7 +19,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
     </div>
-    <div class="cation">뮤비 제목</div>
+    <div class="caption">뮤비 제목</div>
     <button class="btn-close" type="button">닫기</button>
   </div>
 
