마우스 커서 따라다니는 애 구현

--- a/07-mouse/01-change-cursor/index2.html
+++ b/07-mouse/01-change-cursor/index2.html
@@ -41,10 +41,41 @@
       pointer-events: none;
       user-select: none;
 
+      z-index: 1;
+
     }
 
     .cursor.click {
       background-position: -33px 0;
+    }
+
+    /* 따라다니는 애 */
+    .spark {
+      transform: translate(calc(-50% + 6px), calc(-50% + -4px));
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 10px;
+      height: 10px;
+      background: #000;
+      border-radius: 50%;
+      pointer-events: none;
+      user-select: none;
+      transition: 0.4s;
+
+    }
+
+    .spark.active {
+
+      animation: spark-ani 1s;
+    }
+
+    @keyframes spark-ani {
+      100% {
+        width: 70px;
+        height: 70px;
+        opacity: 0;
+      }
     }
   </style>
   <script src="./js/jquery-3.3.1.min.js"></script>
@@ -54,6 +85,7 @@
       // 대상을 변수에 저장
       const $window = $(window);
       const $cursor = $('.cursor');
+      const $spark = $('.spark');
 
       // 브라우저 창에서 마우스가 움직일 때
       $window.on('mousemove', function (e) {
@@ -64,7 +96,7 @@
         const mouseY = e.pageY;
 
         // 가짜 마우스의 left, top 값으로 적용
-        $cursor.css({
+        $cursor.add($spark).css({
           left: mouseX,
           top: mouseY
         });
@@ -74,10 +106,20 @@
       // 마우스를 누르면 click클래스 부여,
       window.on('mousedown', function () {
         $cursor.addClass('click');
+
       })
       // 때면 click클래스 삭제
       window.on('mouseup', function () {
         $cursor.removeClass('click');
+        // $spark.removeClass('acive');
+      })
+      // 화면을 클릭하면 spark에 active 클래스 부여
+      $window.on('click', function () {
+        $spark.addClass('active');
+
+        setTimeout(function () {
+          $spark.removeClass('acive');
+        }, 1000)
       })
     })
   </script>
@@ -87,6 +129,7 @@
 
 <body>
   <div class="cursor"></div>
+  <div class="spark"></div>
 
   <div class="wrap">
     <p>
