영역을 벗어나면  움직임 종료

--- a/07-mouse/02-mouse-move/index4.html
+++ b/07-mouse/02-mouse-move/index4.html
@@ -91,6 +91,10 @@
 
       // 기본 속도
       const speed = 0.009
+
+      // 애니메이션 정의
+      let raf;
+
       // 마우스가 움직이면 좌표의 시작점을 화면의 정중앙으로 세팅
       // 1. 함수로 정의
       function getOffset() {
@@ -123,7 +127,7 @@
         })
 
         // 부드럽게 반복
-        requestAnimationFrame(moving);
+        raf = requestAnimationFrame(moving);
       }
 
       // 3. 1,2번 실행
@@ -135,6 +139,20 @@
       }
       // 함수 실행
       initAnimation();
+
+      // scroll-area의 윛치값 구하기
+      const targetPos = $('.scroll-area').offset().top;
+      console.log(targetPos);
+
+      // 스크롤이 발생하면
+      $window.on('scroll', function () {
+        const scrollTop = $(this).scrollTop();
+        // 스크롤 값이 scroll-area을 넘어서면 애니메이션 중지
+        if (scrollTop >= targetPos) cancelAnimationFrame(raf);
+
+        // 다시 상단으로 이동하면 움직임 실행
+        if (scrollTop === 0) initAnimation();
+      })
 
     })
   </script>
